Added name to event model

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ the_eye/migrations/__init__.py
 the_eye/migrations/0001_initial.py
 the_eye/migrations/__pycache__/__init__.cpython-39.pyc
 the_eye/migrations/__pycache__/0001_initial.cpython-39.pyc
+the_eye/migrations/__pycache__/0002_event_name_alter_event_category_and_more.cpython-39.pyc
